fixes android non-supporting overflow

--- a/src/components/popup/style/popup.less
+++ b/src/components/popup/style/popup.less
@@ -20,6 +20,7 @@
     -webkit-overflow-scrolling: touch;
   }
   @media (max-width: @screen-phone) {
+    position: fixed !important;
     overflow: hidden;
   }
 }
